<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".PlayerFragment"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--Write me-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/nowPlayingText"
            android:text="Now Playing: "
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/playerCurrentSongText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/nowPlayingText"
            app:layout_constraintBaseline_toBaselineOf="@id/nowPlayingText"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/nextUpText"
            android:text="Next Up: "
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/playerNextSongText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/nextUpText"
            app:layout_constraintBaseline_toBaselineOf="@id/nextUpText"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playerRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/loopIndicator"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:text="L"
            android:textSize="36sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/playerSkipBackButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_skip_previous_24"
            android:background="@null"
            app:layout_constraintStart_toEndOf="@id/loopIndicator"
            app:layout_constraintEnd_toStartOf="@id/playerPlayPauseButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/playerPlayPauseButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:background="@null"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/playerSkipBackButton"
            app:layout_constraintEnd_toStartOf="@id/playerSkipForwardButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/playerSkipForwardButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_baseline_skip_next_24"
            android:background="@null"
            app:layout_constraintStart_toEndOf="@id/playerPlayPauseButton"
            app:layout_constraintEnd_toStartOf="@id/playerPermuteButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/playerPermuteButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/playerTimePassedText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="0:00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/playerSeekBar"/>

        <SeekBar
            android:id="@+id/playerSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/playerTimePassedText"
            app:layout_constraintEnd_toStartOf="@id/playerTimeRemainingText"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/playerTimeRemainingText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="-0:00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/playerSeekBar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>